# stockpot

./: .env.integration-test  .env.local  .env.sample  .gitignore  Cargo.toml  docker-compose.yaml  eslint.config.js  package-lock.json  package.json  tsconfig.json
api/: .env.integration-test  .env.local  .env.sample  Cargo.toml
api/docker/: api.dockerfile  integration-test.dockerfile  sqlxcli.dockerfile  unit-test.dockerfile
api/migrations/: 20231222171801_rename-dummy-table-as-user.down.sql  20231222171801_rename-dummy-table-as-user.up.sql  20240421190034_add_auth_user_table.down.sql  20240518144144_add_units_grams.down.sql
api/src/: main.rs
api/src/adapters/http/: error.rs  mod.rs  recipe.rs  user.rs
api/src/adapters/repositories/: auth.rs  mod.rs  recipe.rs  user.rs
api/src/commands/: server.rs
api/src/core/: mod.rs
api/src/core/domain/: auth.rs  mod.rs  user.rs
api/src/core/port/: auth.rs  mod.rs  recipe.rs
api/src/core/service/: mod.rs  recipe.rs  user.rs
api/tests/: integration_test.rs
api/tests/fixtures/: ingredients.sql
docker/: api.dockerfile  app.dockerfile  integration-test.dockerfile  sqlxcli.dockerfile  ui.dockerfile  unit-test.dockerfile
docker/files/: nginx.conf
migrations/: 20231121220736_helloworld.down.sql  20231121220736_helloworld.up.sql  20240421190034_add_auth_user_table.up.sql  20240512162848_add_recipe_tables.down.sql  20240512162848_add_recipe_tables.up.sql  20240518144144_add_units_grams.up.sql
src/: lib.rs  main.rs
src/adapters/http/: error.rs  extract.rs  mod.rs  recipe.rs  user.rs
src/adapters/repositories/: mod.rs  recipe.rs  user.rs
src/commands/: mod.rs  server.rs
src/core/domain/: auth.rs  mod.rs  recipe.rs  user.rs
src/core/port/: auth.rs  mod.rs  user.rs
src/core/service/: auth.rs  mod.rs  user.rs
src/http/: mod.rs
tests/: integration_test.rs
tests/fixtures/: user.sql
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
ui/src/components/: AuthProvider.tsx  Home.tsx
ui/src/components/auth/: AuthProvider.tsx  authContext.tsx
ui/src/components/navigation/: Navbar.tsx
ui/src/components/recipe/: CreateRecipePage.tsx  EditRecipePage.tsx  RecipeCard.tsx  RecipeDetailPage.tsx  RecipeForm.tsx  RecipeList.tsx  RecipeMeta.tsx  RecipesPage.tsx
ui/src/components/user/: Profile.tsx  Signin.tsx  Signout.tsx  Signup.tsx
ui/src/config/: index.ts  local.ts  types.ts
ui/src/utils/: api.ts  case.ts  form.ts
