[package]
name = "stockpot"
version = "0.1.0"
authors = ["Matt Stanley <stanley.t.matthew@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive", "env"] }
dotenvy = "0.15.6"
