[package]
name = "stockpot"
version = "0.1.0"
authors = ["Matt Stanley <stanley.t.matthew@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = "0.6.1"
clap = { version = "3.2.17", features = ["derive", "env"] }
dotenvy = "0.15.6"
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
