[package]
name = "stockpot"
version = "0.1.0"
authors = ["Matt Stanley <stanley.t.matthew@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
argon2 = "0.5.3"
async-trait = "0.1.75"
axum = "0.7.5"
axum-macros = "0.4.1"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.17", features = ["derive", "env"] }
dotenvy = "0.15.6"
env_logger = "0.10.0"
headers = "0.4.0"
jsonwebtoken = "9.3.0"
log = "0.4.17"
mockall = "0.12.1"
rand = "0.8.5"
secrecy = "0.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = { version = "3.8.1", features = ["chrono_0_4"]}
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
thiserror = "1.0.51"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-layer = "0.3.2"
tower-service = "0.3.2"
